--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Software Engineer Portfolio</title>
+    <title>Engineers Portfolio</title>
+    <link rel="icon" href="portfolio_icon.png" type="image/png">
     <link rel="stylesheet" href="mainpage.css">
     <link rel="stylesheet" href="mainpageanime.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
